add link and change the text

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                     <h2 class="text-base font-light mb-6 text-blue-900">
                         <span class="font-semibold">FrontEnd Engineering</span>
                     </h2>
-                    <a href="#" class="text-base font-semibold text-white bg-red-500 py-3 px-8 rounded-full hover:bg-blue-900 hover:text-white transition duration-300 ease-in-out">Hubungi Saya</a>
+                    <a href="https://www.instagram.com/bethaarnt.id" class="text-base font-semibold text-white bg-red-500 py-3 px-8 rounded-full hover:bg-blue-900 hover:text-white transition duration-300 ease-in-out">Follow Me</a>
                 </div>
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="relative mt-10 lg:mt-9 lg:right-0">
