--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
-<!-- npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio</title>
+    <title>Personal-Web-Assignment4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -17,12 +16,6 @@
             extend: {
                 fontFamily:{
                     poppins: "Poppins",
-                },
-                colors: {
-                    black: "#0f172a",
-                },
-                screens: {
-                    "2xl": "1320px",
                 },
             },
         }
